fixed flash visibilty on load, still fixing hosting

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -8,6 +8,9 @@
 body{
     margin:0;
     font-family: 'Oxygen', sans-serif;
+}
+body{
+    visibility: hidden;
 }    
 h1{font-size: 2.5em;}
 h2{font-size: 2.0em;}
